@@ -1,45 +1,49 @@
-(def version "0.5.21")
+(def version "0.6.1")
 
 (defproject datalevin version
   :description "A simple, fast and versatile Datalog database"
   :url "https://github.com/juji-io/datalevin"
   :license {:name "EPL-1.0"
             :url  "https://www.eclipse.org/legal/epl-1.0/"}
-  :managed-dependencies [[org.clojure/clojure "1.10.3"]
+  :managed-dependencies [
+                         [babashka/babashka.pods "0.1.0"]
+                         [com.cognitect/transit-clj "1.0.329"]
+                         [com.fasterxml.jackson.core/jackson-core "2.13.2"]
+                         [com.github.clj-easy/graal-build-time "0.1.4"]
+                         [com.taoensso/nippy "3.1.1"]
+                         [com.taoensso/timbre "5.1.2"]
+                         [me.lemire.integercompression/JavaFastPFOR "0.1.12"]
+                         [nrepl/bencode "1.1.0"]
+                         [org.babashka/sci "0.3.2"]
+                         [org.bouncycastle/bcprov-jdk15on "1.70"]
+                         [org.clojure/clojure "1.10.3"]
                          [org.clojure/tools.cli "1.0.206"]
-                         [org.clojure/test.check "1.1.0"]
+                         [org.clojure/test.check "1.1.1"]
                          [org.clojars.huahaiy/dtlvnative-macos-amd64 "0.4.2"]
                          [org.clojars.huahaiy/dtlvnative-windows-amd64 "0.4.2"]
                          [org.clojars.huahaiy/dtlvnative-linux-amd64 "0.4.2"]
-                         [babashka/babashka.pods "0.0.1"]
-                         [com.fasterxml.jackson.core/jackson-core "2.12.5"]
-                         [com.cognitect/transit-clj "1.0.324"
-                          ;; :exclusions [com.fasterxml.jackson.core/jackson-core]
-                          ]
-                         [nrepl/bencode "1.1.0"]
-                         [org.graalvm.sdk/graal-sdk "21.1.0"]
-                         [org.graalvm.nativeimage/svm "21.1.0"]
-                         [borkdude/sci "0.2.6"]
-                         [com.taoensso/nippy "3.1.1"]
-                         [org.roaringbitmap/RoaringBitmap "0.9.3"]
-                         [com.taoensso/timbre "5.1.2"]
-                         [persistent-sorted-set "0.1.4"]
-                         [org.bouncycastle/bcprov-jdk15on "1.69"]
-                         [com.clojure-goes-fast/clj-memory-meter "0.1.3"]
-                         [com.github.clj-easy/graal-build-time "0.1.0"]
-                         [org.lmdbjava/lmdbjava "0.8.1"
+                         [org.eclipse.collections/eclipse-collections "11.0.0"]
+                         [org.graalvm.sdk/graal-sdk "21.3.0"]
+                         [org.graalvm.nativeimage/svm "21.3.0"]
+                         [org.lmdbjava/lmdbjava "0.8.2"
                           ;; uncomment when run lein codox
                           ;; :exclusions
                           ;; [org.ow2.asm/asm-analysis
                           ;;  org.ow2.asm/asm-commons
                           ;;  org.ow2.asm/asm-tree
                           ;;  org.ow2.asm/asm-util]
-                          ]]
+                          ]
+                         [org.roaringbitmap/RoaringBitmap "0.9.25"]
+                         [persistent-sorted-set "0.1.4"]
+                         ]
   :dependencies [[org.clojure/clojure :scope "provided"]
                  [org.lmdbjava/lmdbjava]
                  [com.taoensso/nippy]
-                 [borkdude/sci]
+                 [org.babashka/sci]
                  [com.fasterxml.jackson.core/jackson-core]
+                 [org.roaringbitmap/RoaringBitmap]
+                 [org.eclipse.collections/eclipse-collections]
+                 [me.lemire.integercompression/JavaFastPFOR]
                  [com.cognitect/transit-clj]
                  [org.roaringbitmap/RoaringBitmap]
                  [persistent-sorted-set]]
@@ -62,11 +66,10 @@
                               ;; uncomment on java 11 and above
                               :jvm-opts
                               ["--add-opens" "java.base/java.nio=ALL-UNNAMED"
+                               "--add-opens" "java.base/java.lang=ALL-UNNAMED"
                                "--add-opens" "java.base/sun.nio.ch=ALL-UNNAMED"
                                "--add-opens" "java.base/jdk.internal.ref=ALL-UNNAMED"
-                               "--illegal-access=permit"
-                               "-Djdk.attach.allowAttachSelf"
-                               "-Dclojure.compiler.direct-linking=true"]
+                               "-Djdk.attach.allowAttachSelf"]
                               :dependencies
                               [[org.clojure/test.check]
                                [org.clojure/tools.cli]
@@ -74,13 +77,13 @@
                                [com.taoensso/timbre]
                                [nrepl/bencode]
                                [babashka/babashka.pods]
-                               [com.clojure-goes-fast/clj-memory-meter]
                                [org.graalvm.nativeimage/svm]]
                               :global-vars
                               {*print-namespace-maps* false
                                *unchecked-math*       :warn-on-boxed
                                *warn-on-reflection*   true}}}
   :jar-exclusions [#"graal"]
+  :jvm-opts ["-Dclojure.compiler.direct-linking=true"]
   :uberjar-exclusions [#"pod.huahaiy.datalevin-test"]
   :deploy-repositories [["clojars" {:url           "https://repo.clojars.org"
                                     :username      :env/clojars_username
